# DSS

./: .gitmodules  LICENSE  Makefile  README.md  backEndAnalysis.py  dhls_install.sh  env.tcl  install.sh  setup
dass/: CMakeLists.txt
dass/BoogieVerification/: BoogieCodeGen.cpp  CMakeLists.txt  LoopInterchangeCheck.cpp
dass/Frontend/: CMakeLists.txt  FrontendDASS.cpp  FrontendLLVM.cpp
dass/StaticIslands/: AddHandshakeInterface.cpp  CMakeLists.txt  LoopUtils.cpp  StaticIslands.cpp
dass/Synthesis/: AddHandshakeInterface.cpp  AutopilotParser.cpp  CMakeLists.txt  DirectSynthesis.cpp  DotBuffering.cpp  Synthesis.cpp  VHDLPortParser.cpp
dass/VitisHLS/: AddTopAttributes.cpp  CMakeLists.txt
dass/components/: MemCont.vhd  arithmetic_units.vhd  clock.xdc  dassArbiter.vhd  elastic_components.vhd  loop_interchanger.vhd  mul_wrapper.vhd  sharing_components.vhd
dass/components/ip_xcvu/: arithmetic_units_with_ips.vhd  dop_ap_dadd_3_full_dsp_64.v  dop_ap_dcmp_0_no_dsp_64.v  dop_ap_ddiv_29_no_dsp_64.v  dop_ap_dmul_4_max_dsp_64.v  dop_ap_dsub_3_full_dsp_64.v  dop_dadd_64ns_64ns_64_5_full_dsp_1.vhd  dop_dcmp_64ns_64ns_1_2_no_dsp_1.vhd  dop_ddiv_64ns_64ns_64_31_no_dsp_1.vhd  dop_dmul_64ns_64ns_64_6_max_dsp_1.vhd  dop_dsub_64ns_64ns_64_5_full_dsp_1.vhd  fop_ap_fadd_3_full_dsp_32.v  fop_ap_fcmp_0_no_dsp_32.v  fop_ap_fdiv_8_no_dsp_32.v  fop_ap_fmul_2_max_dsp_32.v  fop_ap_fsub_3_full_dsp_32.v  fop_fcmp_32ns_32ns_1_2_no_dsp_1.vhd  fop_fdiv_32ns_32ns_32_10_no_dsp_1.vhd  fop_fsub_32ns_32ns_32_5_full_dsp_1.vhd  intop_mul_32s_32s_32_1_1.vhd  intop_sdiv_32ns_32ns_32_36_1.vhd
dass/components/ip_zynq/: arithmetic_units_with_ips.vhd  dop_ap_dadd_5_full_dsp_64.v  dop_ap_dcmp_0_no_dsp_64.v  dop_ap_ddiv_57_no_dsp_64.v  dop_ap_dmul_5_max_dsp_64.v  dop_ap_dsub_5_full_dsp_64.v  (+14 more)
dass/include/: AutopilotParser.h  BoogieVerification.h  InstrTransform.h  StaticIslands.h  Synthesis.h  VHDLPortParser.h
dass/scripts/: DynamaticOptimizer.py  InsertBuffersNaive.py  OptimizeSSFunc.py  PragmaParser.py  VitisSynthesisTCLGen.py  build-dass.sh  setup-vitis-hls-llvm.sh  vecNormTransCaseStudy.py
dass/tools/: README.md
dass/xlibs/: README.md  build.tcl  install.sh
src/dassPass/: CMakeLists.txt
(+215 files in other folders)
